gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag12777.d
version https://git-lfs.github.com/spec/v1
oid sha256:ae314d2f8d3e72329c9d83cd69015d49a339cc0dd4d2140db347b1b0560bde12
size 556
